# pitchmind

./: .gitignore  README.md  STRUCTURE.md
projects/pitchmind/: .env.example  Makefile  PRD.md  Plan.md  handoff.md  memory.md  progress.md  pyproject.toml  system-design.md
projects/pitchmind/apps/api/: Dockerfile  config.py  deps.py  main.py  schemas.py
projects/pitchmind/apps/api/middleware/: auth.py  rate_limit.py
projects/pitchmind/apps/api/routers/: account.py  audits.py  billing.py  brands.py  webhooks.py  workspaces.py
projects/pitchmind/apps/api/services/: audit_stream.py  billing.py  pdf_export.py  stripe_service.py
projects/pitchmind/apps/web/: middleware.ts  package-lock.json  package.json
projects/pitchmind/apps/web/app/[locale]/: layout.tsx  page.tsx
projects/pitchmind/apps/web/app/[locale]/dashboard/: page.tsx
projects/pitchmind/apps/web/app/[locale]/login/: page.tsx
projects/pitchmind/apps/web/app/[locale]/onboarding/: page.tsx
projects/pitchmind/apps/web/app/[locale]/signup/: page.tsx
projects/pitchmind/apps/web/components/: ActionPlanList.tsx  BillingPanel.tsx  BrandSettingsPanel.tsx  CompetitorGapChart.tsx  DashboardHeader.tsx  EmailPrefsPanel.tsx  ExportPdfButton.tsx  LanguageSwitcher.tsx  QueryResultsTable.tsx  RunAuditButton.tsx  ScorecardCards.tsx  SiteFindingsList.tsx
projects/pitchmind/apps/web/i18n/: routing.ts
projects/pitchmind/apps/web/lib/: api-server.ts  api.ts
projects/pitchmind/apps/web/lib/supabase/: server.ts
projects/pitchmind/apps/web/messages/: en.json  id.json
projects/pitchmind/apps/worker/: Dockerfile  celery_app.py
projects/pitchmind/apps/worker/tasks/: __init__.py  audit.py  billing.py  email.py
projects/pitchmind/infra/: docker-compose.yml  railway.toml  railway.worker.toml
projects/pitchmind/tests/: conftest.py
projects/pitchmind/tests/eval/: test_ml_eval.py
projects/pitchmind/tests/eval/fixtures/: ml_eval_dataset.json
projects/pitchmind/tests/integration/: test_audit_pipeline.py
projects/pitchmind/tests/unit/: test_action_plan.py  test_api_routes.py  test_audit_progress.py  test_billing.py  test_geo_hallucination.py  test_geo_parser.py  test_geo_runner.py  test_geo_scorer.py  test_geo_semantic.py  test_harness.py  test_seed_templates.py  test_site_auditor.py  test_site_robots.py  test_site_schema.py
(+7 files in other folders)
