[project]
name = "pitchmind"
version = "0.1.0"
description = "GEO SaaS — Generative Engine Optimization audit platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "ollama>=0.4.0",
    "reportlab>=4.2.0",
    "stripe>=11.0.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"packages/db/alembic/**" = ["E501", "UP035", "UP007"]
"apps/api/middleware/**" = ["E501"]
"apps/api/services/**" = ["E501", "I001"]
"apps/worker/**" = ["E501"]
"packages/db/pitchmind_db/**" = ["E501"]
"packages/geo-engine/pitchmind_geo/action_plan.py" = ["E501"]
"packages/geo-engine/pitchmind_geo/scorer.py" = ["E501"]
"packages/site-auditor/**" = ["E501", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
